syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

service AuthService {
  rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
}


message GetAllRequest{
    int32 flag =1;
}

message GetAllResponse{
    int32 status =1;
    string response =2;
    string error =3;
    int32 count = 4;
    repeated MethodUser users = 5;
}

message MethodUser {
    string first_name = 1;
}
